# 2022-abstractgl

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/agl/: all.hpp
src/agl/api/opengl/: all.hpp
src/agl/common/: all.hpp  optional.hpp  pow.hpp
src/agl/common/grid/: all.hpp  at.hpp  dimension.hpp  grid.hpp  indexing.hpp  proxy.hpp  size.hpp
src/agl/common/grid_indexing/: all.hpp  at.hpp  count.hpp  dimension.hpp  grid_indexing.hpp  size.hpp  size_or.hpp
src/agl/common/interval/: all.hpp  clamp.hpp  contains.hpp  corners.hpp  extend.hpp  interval.hpp  length.hpp  lower_bound.hpp  mapping.hpp  midpoint.hpp  projection.hpp  union_bounds.hpp  upper_bound.hpp
src/agl/common/quaternion/: addition_operator.hpp  all.hpp  conjugate.hpp  division_operator.hpp  dot.hpp  inversed.hpp  mat.hpp  multiplication_operator.hpp  norm.hpp  ostream.hpp  power.hpp  quaternion.hpp  slerp.hpp  squared_norm.hpp  unary_minus_operator.hpp
src/agl/common/scoped/: Scoped.hpp
src/agl/common/size/: all.hpp
src/agl/common/tag/: all.hpp  scoped.hpp
src/agl/constant/: all.hpp  degree_per_radian.hpp  degree_per_revolution.hpp  pi.hpp  radian_per_degree.hpp  radian_per_revolution.hpp  revolution_per_degree.hpp  revolution_per_radian.hpp  tau.hpp
src/agl/engine/: accessor.hpp  all.hpp  buffer.hpp  buffer_view.hpp  camera.hpp  capability.hpp  framebuffer.hpp  material.hpp  mesh.hpp  mesh_instance.hpp  node.hpp  object.hpp  omni_shadow_map.hpp  primitive.hpp  program.hpp  render_pass.hpp  shader.hpp  texture.hpp  transform.hpp  uniform.hpp
src/agl/engine/accessor/: accessor.hpp  all.hpp
src/agl/engine/bounding_box/: all.hpp  are_intersecting.hpp  bounding_box.hpp  contains.hpp  corners.hpp  max.hpp  min.hpp  transform.hpp
src/agl/engine/camera/: all.hpp  bounding_box.hpp  camera.hpp  clip_to_view.hpp  clip_to_world.hpp  eye_to_clip.hpp  eye_to_world.hpp  normal_transform.hpp  orthographic_projection.hpp  rotation.hpp  view_to_camera_transform.hpp  view_to_world_transform.hpp  world_to_camera_transform.hpp  world_to_clip.hpp  world_to_eye.hpp  world_to_view_transform.hpp
src/agl/engine/database/: database.hpp
src/agl/engine/light/: all.hpp
src/agl/engine/material/: all.hpp  upload_to.hpp
src/agl/engine/mesh_instance/: all.hpp  bounding_box.hpp  mesh.hpp  mesh_instance.hpp  primitive.hpp  primitives.hpp  uniform.hpp  upload_to.hpp
src/agl/engine/opengl/: all.hpp
src/agl/engine/render_mesh/: all.hpp  from_triangle_mesh.hpp  point_mesh.hpp  wireframe.hpp
src/agl/engine/render_pass/: all.hpp  clear.hpp  program.hpp  render.hpp  render_pass.hpp  subscribe.hpp
src/agl/engine/scene/: orthographic_projection.hpp  perspective_projection.hpp  view.hpp
src/agl/engine/triangle_mesh/: all.hpp  mesh.hpp
src/agl/engine/uniform_map/: all.hpp
src/agl/format/gltf2/: all.hpp
src/agl/format/off/: all.hpp
src/agl/format/png/: all.hpp
src/agl/format/wavefront/: all.hpp  content.hpp  load_geometry.hpp  (+3 more)
src/agl/geometry/: all.hpp
src/agl/glsl/: all.hpp
src/agl/opengl/: all.hpp  names.hpp
src/agl/standard/: all.hpp
src/agl/tag/: identity.hpp  null.hpp
(+326 files in other folders)
